Feat: docker-compose에 fronted 서비스 통합 및 CORS 설정 변경